2017-05-22 11:21:43 +0200  (HEAD -> master, tag: v0.6.1, origin/master)  0.6.1 -- Tobias Oetiker
2017-05-22 11:21:03 +0200   do not DIE from bad certs -- Tobias Oetiker
2017-04-06 09:50:43 +0200   if chain options are omitted write cert and chain to the file specifi… (#18) -- maettu
2017-04-06 09:52:51 +0200   0.6.0 -- Tobias Oetiker
2017-02-07 10:19:29 +0100   sync changes -- Tobias Oetiker
2016-07-28 14:24:02 +0200   say filename when cert expires within 30 days -- OEP
2017-02-07 10:17:30 +0100  (tag: v0.5.1)  updated dependencies -- Tobias Oetiker
2017-02-07 09:15:22 +0100   copackage a new release of perl-crypt-openssl-x509 since the old one broke with gcc5 -- Tobias Oetiker
2016-05-09 09:52:11 +0200   sync CHANGES for 0.5.0 -- Tobias Oetiker
2016-05-09 09:37:47 +0200  (tag: v0.5.0)  * update to Protocol::ACME 0.12 * remove challenge tokens from the website after use * rename old cert files before installing new ones ... just in case anything fails -- Tobias Oetiker
2016-04-04 15:28:07 +0200   fix readme spelling -- Tobias Oetiker
2016-02-28 14:17:15 +0100   fix typos -- Jan Willamowius
2016-02-28 14:18:12 +0100   fix typos -- Jan Willamowius
2016-04-04 15:25:08 +0200   add unzip dependency -- Tobias Oetiker
2016-02-24 16:32:08 +0100   drop the whole perl module testing stuff from configure ... just confusing -- Tobias Oetiker
2016-02-23 17:59:03 +0100  (tag: v0.4.1)  merge changes -- Tobias Oetiker
2016-02-13 19:15:39 +0100   - config file fix -- Dominik Hassler
2016-02-23 17:57:33 +0100   make configure more careful with checking the environment before getting perl to build things -- Tobias Oetiker
2016-02-13 18:25:02 +0100  (tag: v0.4.0)  * --checkonly option added * make format for certs and keys configurable * updated to Protocol::ACME 0.11 * fix missing use FindBin -- Tobias Oetiker
2016-02-12 19:47:07 +0100   - a couple of fixes -- Dominik Hassler
2016-01-27 11:18:46 +0100   output the key to a temp file -- Tobias Oetiker