@@ -1,1 +1,1 @@
-0.6.2
+0.7.0
