@@ -81,5 +81,6 @@ S<Tobias Oetiker E<lt>tobi@oetiker.chE<gt>>
 
  2016-01-20 to Initial Version
  2016-05-09 to Updated to Protocol::ACME 0.12
+ 2019-07-11 sa Disclaimer added
 
 =cut
