@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man 2.28 (Pod::Simple 3.29)
+.\" Automatically generated by Pod::Man 4.09 (Pod::Simple 3.35)
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -46,7 +46,7 @@
 .ie \n(.g .ds Aq \(aq
 .el       .ds Aq '
 .\"
-.\" If the F register is turned on, we'll generate index entries on stderr for
+.\" If the F register is >0, we'll generate index entries on stderr for
 .\" titles (.TH), headers (.SH), subsections (.SS), items (.Ip), and index
 .\" entries marked with X<> in POD.  Of course, you'll have to process the
 .\" output yourself in some meaningful fashion.
@@ -54,20 +54,16 @@
 .\" Avoid warning from groff about undefined register 'F'.
 .de IX
 ..
-.nr rF 0
-.if \n(.g .if rF .nr rF 1
-.if (\n(rF:(\n(.g==0)) \{
-.    if \nF \{
-.        de IX
-.        tm Index:\\$1\t\\n%\t"\\$2"
+.if !\nF .nr F 0
+.if \nF>0 \{\
+.    de IX
+.    tm Index:\\$1\t\\n%\t"\\$2"
 ..
-.        if !\nF==2 \{
-.            nr % 0
-.            nr F 2
-.        \}
+.    if !\nF==2 \{\
+.        nr % 0
+.        nr F 2
 .    \}
 .\}
-.rr rF
 .\"
 .\" Accent mark definitions (@(#)ms.acc 1.5 88/02/08 SMI; from UCB 4.2).
 .\" Fear.  Run.  Save yourself.  No user-serviceable parts.
@@ -133,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "ACMEFETCH 1"
-.TH ACMEFETCH 1 "2017-05-22" "0.6.1" "AcmeFetch"
+.TH ACMEFETCH 1 "2020-06-10" "0.6.2" "AcmeFetch"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -203,7 +199,7 @@ the Free Software Foundation; either version 3 of the License, or
 .PP
 This program is distributed in the hope that it will be useful,
 but \s-1WITHOUT ANY WARRANTY\s0; without even the implied warranty of
-\&\s-1MERCHANTABILITY\s0 or \s-1FITNESS FOR A PARTICULAR PURPOSE. \s0 See the
+\&\s-1MERCHANTABILITY\s0 or \s-1FITNESS FOR A PARTICULAR PURPOSE.\s0  See the
 \&\s-1GNU\s0 General Public License for more details.
 .PP
 You should have received a copy of the \s-1GNU\s0 General Public License
@@ -214,7 +210,8 @@ Foundation, Inc., 675 Mass Ave, Cambridge, \s-1MA 02139, USA.\s0
 Tobias\ Oetiker\ <tobi@oetiker.ch>
 .SH "HISTORY"
 .IX Header "HISTORY"
-.Vb 2
+.Vb 3
 \& 2016\-01\-20 to Initial Version
 \& 2016\-05\-09 to Updated to Protocol::ACME 0.12
+\& 2019\-07\-11 sa Disclaimer added
 .Ve
